| Bug #43825 | ndbmt and DD may cause drop table to hang | ||
|---|---|---|---|
| Submitted: | 24 Mar 2009 8:31 | Modified: | 24 Mar 2009 14:05 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Disk Data | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Tomas Ulin | CPU Architecture: | Any |
[24 Mar 2009 8:31]
Tomas Ulin
[24 Mar 2009 8:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70138 2998 Tomas Ulin 2009-03-24 Bug #43825 ndbmt and DD may cause drop table to hang modified: storage/ndb/src/kernel/blocks/lgman.cpp storage/ndb/src/kernel/blocks/lgman.hpp
[24 Mar 2009 8:34]
Bugs System
Pushed into 5.1.32-ndb-7.0.5 (revid:tomas.ulin@sun.com-20090324083325-zhkeorvi414asw33) (version source revid:tomas.ulin@sun.com-20090324083325-zhkeorvi414asw33) (merge vers: 5.1.32-ndb-7.0.5) (pib:6)
[24 Mar 2009 14:05]
Jon Stephens
Documented bugfix in the NDB-7.0.5 changelog as follows:
When using multi-threaded data nodes, DROP TABLE statements on
Disk Data tables could hang.
