Bug #43825  ndbmt and DD may cause drop table to hang